fix: overflowing tiles

--- a/src/components/DiscoverTiles/discover-tiles.scss
+++ b/src/components/DiscoverTiles/discover-tiles.scss
@@ -2,24 +2,12 @@
 @import '../../styles/mixins';
 
 .owl-theme {
-
-    .main-card {
-        height: 15rem;
-        width: 34rem;
-
-        div {
-            font-size: 2.7rem;
-            margin-right: .5rem;
-        }
-
-        i {
-            font-size: 12rem;
-        }
+    a {
+        text-decoration: none;
     }
 
-    @include at(1600) {
-        .main-card {
-            width: 59rem;
+    .owl-item {
+        @include tablet{
         }
     }
 }
