--- a/src/styles/tiles.scss
+++ b/src/styles/tiles.scss
@@ -1,66 +1,47 @@
-.main-card {
-    border-radius: 1rem;
+.tile {
     position: relative;
-    padding: 1rem;
-    margin-bottom: 1.5rem;
-    height: 7rem;
-    width: 16rem;
-    box-shadow: 0 .3rem .6rem 0 $light-font;
-
-    div {
-        color: $white;
-        font-size: 1.5rem;
-        font-weight: $font-weight-bold;
-        margin-right: .75rem;
-    }
-
-    i {
-        font-size: 4rem;
-    }
-
-    img {
-        opacity: 0.3;
-        max-width: 80%;
-        max-height: 80%;
-        overflow: hidden;
-    }
-}
-
-.transaction-card {
-    @extend .main-card;
-    background-image: linear-gradient(#965E73, #462132);
-    margin-right: 1.5rem;
-
-    i {
-        color: #965E73;
-    }
-}
-
-.liquidity-card {
-    @extend .main-card;
-    background-image: linear-gradient(#E9B480, #B27719);
-    margin-right: 1.5rem;
-
-    i {
-        color: #E9B480;
-    }
-}
-
-.investments-card {
-    @extend .main-card;
-    background-image: linear-gradient(#808F68, #445932);
-
-    i {
-        color: #808F68;
-    }
-}
-
-.transaction-row {
-    position: absolute;
-    bottom: 1rem;
-    align-items: flex-end;
-    justify-content: space-between;
-    width: 80%;
+    background-color: #7F4C60;
+    padding: 15px;
+    box-sizing: border-box;
+    border-radius: 15px;
+    height: 150px;
     display: flex;
-    flex-flow: row nowrap;
+    align-items: flex-end;
+    color: #fff;
+    overflow: hidden;
+    transition-duration: .3s;
+    width:100%;
+
+    .title {
+        position: relative;
+        font-size: 30px;
+        z-index: 1;
+    }
+
+    .icon {
+        position: absolute;
+        font-size: 180px;
+        line-height: 1em;
+        right: -15px;
+        top: -30px;
+        opacity: .3;
+        z-index: 0;
+
+    }
+
+    @include states {
+        opacity: .9;
+    }
+
+    &.transaction {
+        background-image: linear-gradient(#965E73, #462132);
+    }
+
+    &.liquidity {
+        background-image: linear-gradient(#E9B480, #B27719);
+    }
+
+    &.investments {
+        background-image: linear-gradient(#808F68, #445932);
+    }
 }
